--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,8 @@
 {
-  "name": "svea/checkout",
+  "name": "sveawebpay/nwt-magento2-checkout",
   "description": "Svea Checkout",
   "type": "magento2-module",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "autoload": {
     "files": [
       "registration.php"
