--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "gulp-autoprefixer": "^6.1.0",
     "gulp-clean-css": "^4.2.0",
     "gulp-less": "^4.0.1",
-    "gulp-watch": "^5.0.1"
+    "gulp-watch": "git://github.com/bartw/gulp-watch.git#master"
+  },
+  "dependencies": {
+    "kind-of": "^6.0.3"
   }
 }
